3.2
	+ Initial release