@@ -31,8 +31,6 @@ use EBox;
 use EBox::Global;
 use EBox::Gettext;
 
-use TryCatch::Lite;
-
 # Group: Public methods
 
 sub new
