@@ -23,7 +23,7 @@ use base 'EBox::CGI::Base';
 use EBox;
 use EBox::Global;
 use EBox::Gettext;
-use TryCatch::Lite;
+use Error qw(:try);
 
 sub new
 {
@@ -73,13 +73,14 @@ sub _process
             value => $data,
             type => 'good',
         };
-    } catch ($error) {
+    } otherwise {
+        my $error = shift;
         EBox::error($error);
         $self->{json} = {
             value => qq{<li><span class="red">$error</span></li>},
             type => 'error',
         };
-    }
+    };
 }
 
 1;
