@@ -24,7 +24,7 @@ use EBox;
 use EBox::Global;
 use EBox::Gettext;
 
-use TryCatch::Lite;
+use Error qw(:try);
 
 sub new
 {
@@ -73,12 +73,13 @@ sub _process
             value => $data,
             type => 'good',
         };
-    } catch ($error) {
+    } otherwise {
+        my $error = shift;
         $self->{json} = {
             value => qq{<li><span class="red">$error</span></li>},
             type => 'error',
         };
-    }
+    };
 }
 
 1;
