@@ -1,2 +1,4 @@
+HEAD
+	+ Use Error instead of TryCatch::Lite
 3.2
 	+ Initial release
